--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@
   margin: 1rem 0;
 }
 
-.promotion img {
+.promotion > img {
   max-height: 192px;
   min-width: 192px;
 }
@@ -42,4 +42,25 @@
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.stampsDisplay {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.stampsDisplay li {margin:  0; padding: 0;}
+.stampsDisplay li img {
+  height: 5rem;
+  width: 5rem;
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+.stampsDisplay .unstamped {
+  filter: grayscale(1);
 }
