--- a/src/styles.css
+++ b/src/styles.css
@@ -52,6 +52,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  font-size: 3rem;
 }
 .stampsDisplay li {margin:  0; padding: 0;}
 .stampsDisplay li img {
